[tool.poetry]
name = "repl_nix_popcorn"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.7.0"
openai = "^0.25.0"
schedule = "^1.1.0"
django-rq-scheduler = "^2022.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
